--- a/ProyectosPersonales/main.css
+++ b/ProyectosPersonales/main.css
@@ -2327,7 +2327,7 @@ input, select, textarea {
 		.image.featured {
 			display: block;
 			margin: 0 0 3em 0;
-			width: 100%;
+			width: 90%;
 		}
 
 			.image.featured img {
@@ -2342,6 +2342,26 @@ input, select, textarea {
 
 			}
 
+			.image.featured2 {
+			display: flex;
+    		justify-content: center; /* Centra horizontalmente */
+			margin: 0 0 3em 0;
+			width: 100%;
+
+		}
+
+			.image.featured2 img {
+				width: 50%;
+			}
+
+			@media screen and (max-width: 736px) {
+
+				.image.featured2 {
+					margin: 0 0 1.5em 0;
+				}
+
+			}
+
 		.image.main {
 			display: block;
 			margin: 0 0 3em 0;
@@ -2351,6 +2371,8 @@ input, select, textarea {
 			.image.main img {
 				width: 100%;
 			}
+
+
 
 /* List */
 
@@ -3626,7 +3648,10 @@ input, select, textarea {
 	text-align: center;
 }
 
-#Presentacion .texto-p
+.centrar
 {
 	
+	text-align: center;
+
 }
+
