--- a/CSS/style.css
+++ b/CSS/style.css
@@ -73,6 +73,9 @@ body {
     -webkit-background-clip: text;
 }
 
+
+/*--------------------Home----------------------------*/
+
 .home {
     width: 100%;
     height: 100vh;
@@ -258,6 +261,91 @@ canvas {
     scroll-behavior: smooth;
 }
 
+/*--------------------------------Contenido General------------------------------*/
+
+
+
+.titulogeneral
+{
+    text-align: center;
+    padding-top: 120px;
+}
+
+.titulogeneral h1 {
+    font-size: 56px;
+    font-weight: 700;
+    line-height: 1.2;
+    opacity: 0;
+    animation: slideRight 1s ease forwards;
+    animation-delay: .7s;
+}   
+
+.titulogeneral h3 {
+    font-size: 32px;
+    font-weight: 700;
+    opacity: 0;
+    animation: slideLeft 1s ease forwards;
+    animation-delay: 1s;
+}
+
+
+.titulogeneral h1, h3 {
+    text-shadow: 5px 4px 10px green;
+}
+
+
+
+
+.textogeneral
+{
+    text-align: center;
+    max-width: 1000px;
+    padding: 4em;
+}
+
+.centrar
+{
+    text-align: center;
+    justify-items: center;
+}
+
+.textogeneral h1 {
+    font-size: 56px;
+    font-weight: 700;
+    line-height: 1.2;
+    opacity: 0;
+    animation: slideRight 1s ease forwards;
+    animation-delay: .7s;
+}   
+
+.textogeneral h3 {
+    font-size: 21px;
+    font-weight: 700;
+    opacity: 0;
+    animation: slideLeft 1s ease forwards;
+    animation-delay: 1s;
+}
+
+.mu {
+    margin-top: 50px;
+}
+
+.textogeneral h1, h3 ,h2 {
+    text-shadow: 5px 4px 10px green;
+}
+
+.textogeneral p {
+    font-size: 20px;
+    margin: 20px 0 0;
+    text-align:center;
+    opacity: 0;
+    animation: slideLeft 1s ease forwards;
+    animation-delay: 1.3s;
+}
+
+
+
+
 
 /* ---------------------------About----------------------- */
 
@@ -291,6 +379,19 @@ canvas {
     animation: slideLeft 1s ease forwards;
     animation-delay: 1.3s;
 }
+
+
+/*------------------Web-resposive para about---------------------- */
+
+
+
+
+
+
+
+
+
+
 
 /* Animation */
 @keyframes slideTop {
